fix: fix logo z-index

--- a/src/components/blocks/logo/_logo.scss
+++ b/src/components/blocks/logo/_logo.scss
@@ -19,7 +19,7 @@
   align-items: center;
   margin-right: auto;
   position: relative;
-  z-index: 3;
+  z-index: 1;
   & svg:last-child {
     margin-bottom: -1px;
   }
