--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -6,6 +6,9 @@
   width: 100%;
   background-color: #fff;
   box-shadow: 0 10px 20px 0 variables.$dark5;
+  & .logo {
+    z-index: 3;
+  }
   & .button {
     height: 34px;
     min-width: 87px;
